cluster-aggregator/src/section/snapshots/cluster_aggregator__section__resource__tests__kube_allocatable_cpu_resource_v1_sums_across_nodes.snap
---
source: cluster-aggregator/src/section/resource.rs
expression: "KubeAllocatableCpuResourceV1::from_nodes(&nodes)"
---
{
  "context": "cluster",
  "value": 2.002
}
