cluster-aggregator/src/section/snapshots/cluster_aggregator__section__resource__tests__kube_allocatable_memory_resource_v1.snap
---
source: cluster-aggregator/src/section/resource.rs
expression: "KubeAllocatableMemoryResourceV1::from_node(&node_with_allocatable(\"memory\",\n\"1Gi\"))"
---
{
  "context": "node",
  "value": 1073741824.0
}
